Filemanager, ability to play videos, more settings.
Added a very simple filemanager, listing every file in a folder on the rpi.
The folder can be changed from settings.
Some bugfixes.

--- a/Android/omxRemote-android/AndroidManifest.xml
+++ b/Android/omxRemote-android/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name="org.dyndns.stonehammer.pontus.OmxRemote.Settings"
             android:label="@string/title_activity_settings" >
         </activity>
+        <activity
+            android:name="org.dyndns.stonehammer.pontus.OmxRemote.Filemanager"
+            android:label="@string/title_activity_filemanager" >
+        </activity>
     </application>
 
 </manifest>
